# vimdemo1

./: .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README  SetupInstallPath.cmake
cmake/modules/: setupc11.cmake  setupvimide.cmake
lib/: CMakeLists.txt  printer.cxx  printer.h
src/: CMakeLists.txt  main.cxx  myclass.cxx  myclass.h
